k8s/policies/networkpolicies/prod/allow-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis
  namespace: fleetops-prod
  labels:
    app.kubernetes.io/name: fleetops-prod
    app.kubernetes.io/environment: prod
    app.kubernetes.io/component: networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fleetops-redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: fleetops-vehicle-service
    ports:
    - protocol: TCP
      port: 6379
